Require platform Wasmtime execution